[package]
name = "km_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
keycat = { git = "https://github.com/antler5/keycat", features = ["serde"], optional = true }
keymeow = { git = "https://github.com/antler5/keymeow" }
rmp-serde = { version = "1.3.0", optional = true }
serde_json = { version = "1.0.116", optional = true}
minreq = { version = "2.11.2", features = ["https-rustls", "json-using-serde"], optional = true }
serde = { version = "1.0.200", optional = true}

[features]
default = ["layouts", "corpora", "keyboards"]
layouts = ["dep:serde_json"]
corpora = ["dep:rmp-serde", "dep:keycat"]
keyboards = ["dep:rmp-serde", "dep:keycat"]
download = ["dep:minreq", "dep:serde"]

